# llama.cpp

conversion/: __init__.py  longcat.py
gguf-py/gguf/: constants.py
rust/: .gitignore  Cargo.toml
rust/crates/ggml/: Cargo.toml
rust/crates/ggml/src/: dequant.rs  layout.rs  lib.rs
rust/crates/ggml/src/ops/: add.rs  matmul.rs  mod.rs  mul.rs  rmsnorm.rs  rope.rs  silu.rs  softmax.rs
rust/crates/ggml/tests/: dequant.rs  rmsnorm.rs
rust/crates/ggml/tests/fixtures/dequant/: README.md  regenerate.sh
rust/crates/ggml/tests/fixtures/rmsnorm/: README.md  regenerate.sh
rust/crates/gguf/: Cargo.toml
rust/crates/gguf/src/: lib.rs
rust/crates/gguf/tests/: real_files.rs
rust/oracle/: CMakeLists.txt  oracle.cpp  run-oracle.sh
src/: llama-arch.cpp  llama-arch.h  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-model.cpp  llama-vocab.cpp
src/models/: longcat-flash.cpp  models.h
