[workspace]
resolver = "2"
members = [
    "crates/ggml",
    "crates/gguf",
]

# Pure-Rust port of llama.cpp, built bottom-up and kept green + tested at every
# step. Crates are added as functionality is ported:
#   ggml  - tensor type system + (later) ops/graph/backends
#   gguf  - GGUF model file format reader/writer
#   ...   - vocab/tokenizer, sampling, model loading, generation
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ggml-org/llama.cpp"

[profile.release]
opt-level = 3
lto = "thin"
