[package]
name = "ggml"
description = "Core ggml tensor types, ported to safe Rust (part of the llama.cpp Rust port)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
half = "2.7"

[dev-dependencies]
rand = "0.10"
rand_chacha = "0.10"
